# cinderblock

./: Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: ci.yml
crates/ash-core/: Cargo.toml
crates/ash-core-macros/: Cargo.toml
crates/ash-core-macros/src/: lib.rs
crates/ash-core/examples/: helpdesk.rs
crates/ash-core/src/: lib.rs
crates/ash-core/src/data_layer/: file_storage.rs  in_memory.rs  mod.rs
crates/ash-extension-api/: Cargo.toml
crates/ash-extension-api/src/: lib.rs
crates/ash-json-api/: Cargo.toml
crates/ash-json-api-macros/: Cargo.toml
crates/ash-json-api-macros/src/: lib.rs
crates/ash-json-api/examples/: helpdesk_api.rs
crates/ash-json-api/src/: lib.rs
crates/ash-sqlx/: Cargo.toml
crates/ash-sqlx-macros/: Cargo.toml
crates/ash-sqlx-macros/src/: lib.rs
crates/ash-sqlx/src/: lib.rs  sqlite.rs
crates/ash-sqlx/tests/: sqlite_crud.rs
crates/cinderblock-core/: Cargo.toml
crates/cinderblock-core-macros/: Cargo.toml
crates/cinderblock-core-macros/src/: lib.rs  tests.rs  util.rs
crates/cinderblock-core-macros/src/action/: create.rs  destroy.rs  mod.rs  read.rs  update.rs
crates/cinderblock-core/examples/: helpdesk.rs
crates/cinderblock-core/src/: lib.rs
crates/cinderblock-core/src/data_layer/: in_memory.rs  mod.rs
crates/cinderblock-core/tests/: in_memory_crud.rs
crates/cinderblock-extension-api/: Cargo.toml
crates/cinderblock-extension-api/src/: lib.rs  tests.rs  util.rs
crates/cinderblock-extension-api/src/domain/: resource_name.rs
crates/cinderblock-json-api/: Cargo.toml
crates/cinderblock-json-api-macros/: Cargo.toml
crates/cinderblock-json-api-macros/src/: lib.rs
crates/cinderblock-json-api/examples/: helpdesk_api.rs
crates/cinderblock-json-api/src/: lib.rs
crates/cinderblock-json-api/tests/: cors.rs  option_attribute.rs
crates/cinderblock-sqlx/: Cargo.toml
crates/cinderblock-sqlx-macros/: Cargo.toml
crates/cinderblock-sqlx-macros/src/: lib.rs
crates/cinderblock-sqlx/src/: lib.rs  postgres.rs  sqlite.rs
crates/cinderblock-sqlx/tests/: postgres_crud.rs  sqlite_crud.rs
