[workspace]
resolver = "3"
members = [
	"crates/cinderblock-core",
	"crates/cinderblock-core-macros",
	"crates/cinderblock-extension-api",
	"crates/cinderblock-json-api",
	"crates/cinderblock-json-api-macros", "crates/cinderblock-sqlx", "crates/cinderblock-sqlx-macros",
]

[workspace.package]
edition = "2024"
