[workspace]
resolver = "3"
members = [
	"crates/cinderblock-core",
	"crates/cinderblock-core-macros",
	"crates/cinderblock-extension-api",
	"crates/cinderblock-json-api",
	"crates/cinderblock-json-api-macros", "crates/cinderblock-sqlx", "crates/cinderblock-sqlx-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/nils-degroot/cinderblock"
readme = "README.md"
keywords = ["framework", "crud", "resource", "declarative", "code-generation"]
categories = ["web-programming"]

[workspace.dependencies]
cinderblock-core = { version = "0.2.0", path = "crates/cinderblock-core" }
cinderblock-core-macros = { version = "0.2.0", path = "crates/cinderblock-core-macros" }
cinderblock-extension-api = { version = "0.2.0", path = "crates/cinderblock-extension-api" }
cinderblock-json-api-macros = { version = "0.2.0", path = "crates/cinderblock-json-api-macros" }
cinderblock-sqlx-macros = { version = "0.2.0", path = "crates/cinderblock-sqlx-macros" }
