[package]
name = "ash-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
ash-core-macros = { version = "0.1.0", path = "../ash-core-macros" }
dirs2 = "3.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["sync"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }
