[package]
name = "ash-json-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
ash-core = { path = "../ash-core" }
ash-json-api-macros = { path = "../ash-json-api-macros" }
axum = "0.8"
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
