[package]
name = "ash-sqlx-macros"
version = "0.1.0"
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
ash-extension-api = { version = "0.1.0", path = "../ash-extension-api" }
convert_case = "0.11.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"

[dev-dependencies]
assert2 = "0.4"
