[package]
name = "cinderblock-core-macros"
description = "Proc macro implementing the cinderblock resource! macro for generating structs and CRUD trait impls"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
cinderblock-extension-api.workspace = true
convert_case = "0.11.0"
darling = "0.23.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"

[dev-dependencies]
assert2 = "0.4"
