[package]
name = "cinderblock-core"
description = "Resource trait definitions, CRUD operations, runtime context, and in-memory data layer for cinderblock"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cinderblock-core-macros.workspace = true
dirs2 = "3.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["sync"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }

[dev-dependencies]
assert2 = "0.4"
tokio = { version = "1.50.0", features = ["full"] }
