[package]
name = "cinderblock-extension-api"
description = "Shared DSL parser types and syn::Parse implementations for the cinderblock resource! macro and extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
convert_case = "0.11.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "extra-traits", "parsing"] }

[dev-dependencies]
assert2 = "0.4"
